purchase page/tab, implement product buttons/tabs on product page

--- a/Sparc2/Sparc2/Catalog/Catalog.razor
+++ b/Sparc2/Sparc2/Catalog/Catalog.razor
@@ -16,7 +16,7 @@
             <div class="container">
                 @if (ActiveProduct != null)
                 {
-                    <ProductInfo ActiveProduct="ActiveProduct" />
+                    <ProductInfo PageType="Catalog" ActiveProduct="ActiveProduct" />
                 } else
                 {
                     <div class="product-info">
