--- a/Sparc2/Sparc2/Index.razor.css
+++ b/Sparc2/Sparc2/Index.razor.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: var(--yellow-50);
 }
 section .hero {
   width: calc(100% - 200px);
