--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -13,7 +13,7 @@
         height: 48px;
         margin: 0;
         padding: 16px 32px;
-        background: white;
+        background: var(--yellow-50);
     }
 
     .container {
