--- a/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
+++ b/Sparc2/Sparc2/Catalog/ProductInfo.razor.scss
@@ -3,6 +3,8 @@
     flex-direction: column;
     gap: 32px;
     width: calc(100% - 32px);
+    padding-bottom: 150px;
+    position: relative;
 
     header {
         display: flex;
@@ -93,7 +95,7 @@
             flex-direction: column;
             gap: 16px;
 
-            h4, p, span {
+            h4, p, span, button {
                 font-family: "Fjalla One";
                 font-size: 16px;
                 font-style: normal;
@@ -110,17 +112,33 @@
             }
 
             button {
-                width: 20px;
-                height: 20px;
-                vertical-align: middle;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 4px;
                 background: none;
+                transition: .2s ease-in-out;
 
-                &.rotate {
-                    animation: rotateClockwise 1.5s ease-in-out;
+                &:hover {
+                    color: var(--purple-500);
                 }
 
-                &.rotateBack {
-                    animation: rotateCounterClockwise 1.5s ease-in-out;
+                &:active {
+                    color: var(--purple-800);
+                }
+
+                span {
+                    display: inline-block;
+                    vertical-align: middle;
+
+                    &.rotate {
+                        color: var(--purple-500);
+                        animation: rotateClockwise 1.5s ease-in-out;
+                    }
+
+                    &.rotateBack {
+                        animation: rotateCounterClockwise 1.5s ease-in-out;
+                    }
                 }
             }
 
@@ -128,14 +146,20 @@
                 //overflow: hidden;
                 //max-height: 0;
                 //transition: max-height 2s ease-in-out;
+                height: 0;
                 opacity: 0;
-                animation: fadeOut 1.5s ease-out;
 
-                &.show {
+                &.rotate {
                     //max-height: 300px;
                     //transition: max-height 2s ease-in-out;
+                    height: fit-content;
                     opacity: 1;
                     animation: fadeIn 1.5s ease-in;
+                }
+
+                &.rotateBack {
+                    opacity: 0;
+                    animation: fadeOut 1.5s ease-in;
                 }
             }
         }
@@ -165,19 +189,23 @@
 @keyframes rotateClockwise {
     0% {
         transform: rotate(0deg);
+        color: var(--purple-800);
     }
 
     100% {
         transform: rotate(180deg);
+        color: var(--purple-500);
     }
 }
 
 @keyframes rotateCounterClockwise {
     0% {
         transform: rotate(180deg);
+        color: var(--purple-500);
     }
 
     100% {
         transform: rotate(0deg);
+        color: var(--purple-800);
     }
 }
