--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: var(--yellow-50);
 
     .hero {
         width: calc(100% - 200px);
