--- a/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
+++ b/Sparc2/Sparc2/Shared/CatalogLayout.razor.scss
@@ -6,7 +6,7 @@ main {
     margin-top: 80px;
     padding-top: 16px;
     font-family: 'elza-text', sans-serif;
-    animation: fadeIn 2s ease-in-out;
+    background: var(--yellow-50);
 
     .grid {
         display: grid;
@@ -14,6 +14,7 @@ main {
         //column-gap: 32px;
         grid-template-columns: repeat(12, 80px);
         column-gap: 20px;
+        animation: fadeIn 2s ease-in-out;
     }
 }
 
