--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -12,7 +12,7 @@ nav.home-nav {
   height: 48px;
   margin: 0;
   padding: 16px 32px;
-  background: white;
+  background: var(--yellow-50);
 }
 nav .container {
   width: 100%;
