--- a/Sparc2/Sparc2/_Imports.razor
+++ b/Sparc2/Sparc2/_Imports.razor
@@ -22,3 +22,4 @@
 @inject NavigationManager Nav
 @inject BlossomApi Api
 @inject IdeaService IdeaService
+@inject Sparc.Engine.ISparcEngine SparcEngine
