--- a/Sparc2/Sparc2/Pages/AddProduct.razor
+++ b/Sparc2/Sparc2/Pages/AddProduct.razor
@@ -99,7 +99,6 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
     <button type="button" class="btn btn-secondary" @onclick="GoBack">Back</button>
 }
 
-@inject IBlossomCloud Cloud
 @code {
     [Parameter] public int CurrentStep { get; set; }
     [Parameter] public EventCallback OnNext { get; set; }
@@ -171,11 +170,11 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
         _previousStep = CurrentStep;
         _baseUrl = NavManager.BaseUri;
 
-        CurrentUser = await Cloud.UserInfo();
+        CurrentUser = await SparcEngine.UserInfo();
 
         dotNetHelper = DotNetObjectReference.Create(this);
 
-        Product = await Cloud.GetProductAsync("prod_SW5yY8O8KprzFu");
+        Product = await SparcEngine.GetProductAsync("prod_SW5yY8O8KprzFu");
 
         var orderedCurrencies = Product.Prices[0].Keys.OrderBy(c => c).ToList() ?? new List<string>();
         CurrencyOptions = orderedCurrencies;
@@ -357,7 +356,7 @@ else if (CurrentStep == 1 && string.IsNullOrEmpty(_clientSecret))
                 setupFutureUsage
             );
 
-            var intent = await Cloud.CreateOrderPaymentAsync(request);
+            var intent = await SparcEngine.CreateOrderPaymentAsync(request);
 
             _clientSecret = intent.ClientSecret;
             Console.WriteLine($"PaymentIntent created. ClientSecret obtained: {!string.IsNullOrEmpty(_clientSecret)}");
