--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -42,7 +42,7 @@
     List<string> comments = new List<string>();
     List<string> likes = new List<string>();
 
-    string currentFile;
+    string currentFile = "";
 
     protected override void OnInitialized()
     {
