--- a/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor
+++ b/Sparc2/Sparc2/Profile/Avatar/EditAvatar.razor
@@ -36,7 +36,7 @@
             <figure class="avatar @(HasEmoji ? "emoji" : "")" style="background-color: @User.BackgroundColor">
                 <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                     <text x="50%" y="60%" font-size="80" text-anchor="middle" dominant-baseline="middle" style="fill: @User.ForegroundColor">
-                    @(!string.IsNullOrWhiteSpace(User?.Emoji) ? User.Emoji : User.Initials)
+                    @(!string.IsNullOrWhiteSpace(User?.Emoji) ? User.Emoji : User?.Initials)
                     </text>
                 </svg>
             </figure>
