--- a/Sparc2/Sparc2/Shared/Components/Modal.razor
+++ b/Sparc2/Sparc2/Shared/Components/Modal.razor
@@ -17,8 +17,8 @@
 </div>
 
 @code {
-    [Parameter] public string Title { get; set; }
-    [Parameter] public RenderFragment ChildContent { get; set; }
+    [Parameter] public required string Title { get; set; }
+    [Parameter] public required RenderFragment ChildContent { get; set; }
     [Parameter] public EventCallback OnClose { get; set; }
     [Parameter] public EventCallback OnSave { get; set; }
     [Parameter] public bool ShowDefaultButtons { get; set; } = true;
