Post-merge css fixes

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
                 <button id="ideas-btn" class="secondary-btn">Ideas</button>
                 @* <Auth /> *@
                 <div class="account-btn">
-                    <ProfileCircle />
+                    <UserProfile />
                     @if (CurrentUser is not null)
                     {
                         <div @onclick:stopPropagation @onkeypress:stopPropagation>                        
