Implement user profile flow

--- a/Sparc2/Sparc2/Profile/EditPhoneNumber.razor
+++ b/Sparc2/Sparc2/Profile/EditPhoneNumber.razor
@@ -1,9 +1,9 @@
 ﻿<div>
     <InputText @bind-Value="PhoneNumber" @oninput="OnPhoneNumberChanged" />
-    @* <label>
+    <label>
         <InputCheckbox Value="VerifyPhone" ValueChanged="OnVerifyPhoneNumberChanged" ValueExpression="@(() => VerifyPhone)" />
         <span>Verify this phone number</span>
-    </label> *@
+    </label>
 </div>
 
 @code {
