--- a/Sparc2/Sparc2/Profile/UserProfile.razor.scss
+++ b/Sparc2/Sparc2/Profile/UserProfile.razor.scss
@@ -1,14 +1,18 @@
 ﻿.user-profile-container {
     position: relative;
-    width: 40px;
-    height: 40px;
+    /*width: 40px;
+    height: 40px;*/
+    width: 60px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
 
     .profile-picture-wrapper {
-        height: calc(100% - 8px);
-        width: 100%;
+        /*height: calc(100% - 8px);
+        width: 100%;*/
+        width: 32px;
+        height: calc(100% - 28px);
         border-radius: 50%;
         border: 4px solid var(--gray-200);
 
@@ -16,12 +20,22 @@
             border: 4px solid #BDE421;
         }
 
-        img {
+        .user-avatar {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            font-weight: bold;
+            font-size: 1.4em;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        /*img {
             width: 100%;
             height: 100%;
             object-fit: cover;
             border-radius: 50%;
-        }
+        }*/
     }
 
     button {
@@ -39,8 +53,8 @@
         align-items: center;
 
         img {
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
         }
 
         &:hover {
@@ -52,15 +66,35 @@
         }
 
         &.top {
-            top: 40px;
-            right: -80%;
+            /*top: 20px;
+            left: -35%;*/
+            top: 30px;
+            left: -6%;
             transform: translateX(-50%);
         }
 
         &.bottom {
-            bottom: -35px;
-            left: 50%;
+            /*bottom: -20px;
+            left: 12%;*/
+            bottom: -11px;
+            left: 22%;
             transform: translateX(-50%);
+        }
+
+        &.top-left {
+            /*top: -8px;
+            left: -25%;*/
+            top: 3px;
+            left: 0%;
+            transform: translateX(-50%);
+        }
+
+        &.bottom-right {
+            /*bottom: -22px;
+            left: 35%;*/
+            bottom: -14px;
+            left: 37%;
+            transform: translateX(50%);
         }
     }
 }
@@ -69,7 +103,7 @@
     background: linear-gradient(135deg, #f093fb, #f5576c);
 }
 
-.modal {
+/*.modal {
     width: 332px;
     padding: 24px;
     border-radius: 16px;
@@ -106,6 +140,10 @@
         justify-content: space-between;
         margin-top: 16px;
     }
+}*/
+
+.user-profile-container:hover .profile-picture-wrapper {
+    background: linear-gradient(135deg, #f093fb, #f5576c);
 }
 
 @keyframes fadeIn {
